@@ -18,6 +18,8 @@ Major changes from 1.3.x:
 * More scary link caching modes
 * Old manually maintained log pages replaced with searchable Special:Log
 * Skins system more modular: templates and CSS are now in /skins/
+* New user preference for limitting the image size for images on image description
+  pages 
 * ... and more!
 
 === Caveats ===
